--- a/styles.css
+++ b/styles.css
@@ -1272,6 +1272,7 @@ footer {
   	nav ul li {
     	border-bottom: solid 2.5px #f2f2f2;
     	padding-bottom: 15px;
+    	border-top: solid 2.5px transparent;
     	padding-left: 0;
   	}	
   	.menu {
@@ -1283,7 +1284,7 @@ footer {
   	}
   	nav ul li:hover {
     	border-bottom: solid 2.5px #0065fc;
-    	border-top-color: transparent;
+    	border-top: solid 2.5px transparent;
     	padding-bottom: 10px;
     	color: #0065FC;
   	}
