--- a/styles.css
+++ b/styles.css
@@ -1272,7 +1272,8 @@ footer {
   	nav ul li {
     	border-bottom: solid 2.5px #f2f2f2;
     	padding-bottom: 15px;
-    	border-top: solid 2.5px transparent;
+    	border-top: solid 2.5px;
+    	border-top-color: transparent;
     	padding-left: 0;
   	}	
   	.menu {
@@ -1284,7 +1285,8 @@ footer {
   	}
   	nav ul li:hover {
     	border-bottom: solid 2.5px #0065fc;
-    	border-top: solid 2.5px transparent;
+    	border-top: solid 2.5px;
+    	border-top-color: transparent;
     	padding-bottom: 10px;
     	color: #0065FC;
   	}
