--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
 	font-family: "Raleway";
 	overflow-x: hidden;
 	max-width: 100%;
+	margin: 0;
 
 }
 
@@ -157,7 +158,8 @@ nav ul li:hover {
 
 .filterdescription {
 	display: inline-block;
-	font-size: 1.3em;
+	font-size: 1.1em;
+	margin-left: 5px;
 }
 .icontextfilters:hover {
   background-color: #DEEBFF;
@@ -181,17 +183,16 @@ nav ul li:hover {
 .iconinfo {
 	border: 2px solid;
 	border-radius: 50%;
-	width: 20px;
+	width: 30px;
 	height: 30px;
+	justify-content: center;
 	align-items: center;
 	display: inline-flex;
 	color: #0065FC;
-	float: left;
-    margin-top: 17px;
-    font-size: 0.8em;
-    border-color: #f2f2f2;
-    padding-left: 12px;
-    margin-right: 20px;
+  margin-top: 17px;
+  font-size: 0.8em;
+  border-color: #f2f2f2;
+  margin-right: 20px;
 }
 
 .hebergements {
@@ -342,7 +343,7 @@ h5 {
   	color: #0065FC;
   	background-color:#DEEBFF;
   	align-items: center;
-  	box-shadow: 0 0 6px 3px #DEEBFF;
+  	box-shadow: 0 0 0 3px #DEEBFF;
 
 }
 
@@ -357,7 +358,7 @@ h5 {
   	color: #0065FC;
   	background-color:#DEEBFF;
   	align-items: center;
-  	box-shadow: 0 0 6px 3px #DEEBFF;
+  	box-shadow: 0 0 0 3px #DEEBFF;
 }
 
 .iconheart {
@@ -373,7 +374,7 @@ h5 {
   	color: #0065FC;
   	background-color:#DEEBFF;
   	align-items: center;
-  	box-shadow: 0 0 6px 3px #DEEBFF;
+  	box-shadow: 0 0 0 3px #DEEBFF;
 }
 
 .iconanimal {
@@ -389,7 +390,7 @@ h5 {
   	color: #0065FC;
   	background-color:#DEEBFF;
   	align-items: center;
-  	box-shadow: 0 0 6px 3px #DEEBFF;
+  	box-shadow: 0 0 0 3px #DEEBFF;
 }
 
 i {
@@ -577,7 +578,7 @@ footer ul {
 
 
 .activite1 {
-    width: 405px;
+    width: 20%;
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -588,7 +589,7 @@ footer ul {
 }
 
 .activite4 {
-    width: 405px;
+    width: 20%;
     display: flex;
     flex-direction: column;
     height:100%;
@@ -599,7 +600,6 @@ footer ul {
 
 .activite2 {
 		flex-basis: 60%;
-		width: 405px;
     height: 52%;
     border-radius: 20px;
     background-color: #ffffff;
@@ -609,7 +609,6 @@ footer ul {
 
 .activite3 {
 		flex-basis: 40%;
-		width: 405px;
     height: 220px;
     border-radius: 20px;
     background-color: #ffffff;
@@ -619,7 +618,6 @@ footer ul {
 
 .activite5 {
 		flex-basis: 45%;
-		width: 405px;
     height: 48%;
     border-radius: 20px;
     background-color: #ffffff;
@@ -629,11 +627,14 @@ footer ul {
 
 .activite6 {
 		flex-basis: 45%;
-		width: 405px;
     height: 48%;
     border-radius: 20px;
     background-color: #ffffff;
     box-shadow: 0 0 6px 3px #b1b1b14b;
+}
+.activite2et3,
+.activite5et6 {
+	width: 20%;
 }
 
 footer {
@@ -673,7 +674,7 @@ footer {
 		width: 350px;
 	}
 	.boxhebergement {
-		width: 16vw;
+		width: 20vw;
 		padding: 5px;
 		height: 12vw;
 	}
@@ -1370,9 +1371,6 @@ footer {
 	.recherche p {
 		font-size: 1.1em;
 	}
-	.filterdescription {
-		font-size: 0.8em;
-	}
 	h2 {
 		font-size: 1.2em;
 	}
@@ -1431,9 +1429,6 @@ footer {
 	.filtres {
     	width: 100%;
     	margin: 10px 0px 10px 6px;
-  	}
-  	.filterdescription {
-  		font-size: 0.8em;
   	}
 	.boxhebergement {
 		height: 55vw;
