--- a/styles.css
+++ b/styles.css
@@ -374,51 +374,11 @@ img {
 	border-top-left-radius: 20px;
 	object-fit: cover;
 	width: 35%;
-    height: 100%;
-    float: left;
-    margin-right: 15px;
+  height: 100%;
+  float: left;
+  margin-right: 15px;
 }
 
-.imgactivbig,
-.imgactiv1,
-.imgactiv2,
-.imgactiv3,
-.imgactiv4 {
-	border-top-right-radius: 20px;
-	border-top-left-radius: 20px;
-	object-fit: cover;
-	width: 100%;
-}
-
-.imgactivbig {
-	height: 540px;
-    padding: 0;
-    margin: 0;
-}
-
-.imgactiv1 {
-	height: 230px;
-    padding: 0;
-    margin: 0;
-}
-
-.imgactiv2 {
-	height: 160px;
-    padding: 0;
-    margin: 0;
-}
-
-.imgactiv3 {
-	height: 213px;
-    padding: 0;
-    margin: 0;
-}
-
-.imgactiv4 {
-	height: 213px;
-    padding: 0;
-    margin: 0;
-}
 
 
 p {
@@ -497,13 +457,13 @@ main {
 }
 
 .activites {
-	display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    height: 600px;
+	  display: flex;
     margin-bottom: 50px;
     background-color: #ffffff;
     width: 100%;
+  	justify-content: space-between;
+  	margin: 0 3.3vw 3.5vw;
+  	height: 31.5vw;
 }
 
 .activites h4 {
@@ -530,65 +490,73 @@ footer ul {
 
 
 .activite1 {
-    width: 20%;
-    display: flex;
-    height: 100%;
-    border-radius: 20px;
-    background-color: #ffffff;
-    box-shadow: 0 0 6px 3px #b1b1b14b;
-
-}
-
-.activite4 {
-    width: 20%;
-    display: flex;
-    height:100%;
-    border-radius: 20px;
-    background-color: #ffffff;
-    box-shadow: 0 0 6px 3px #b1b1b14b;
+  width: 20%;
+  display: flex;
+  padding: 0;
 }
 
 .activite2 {
-		flex-basis: 60%;
-    height: 50%;
-    border-radius: 20px;
-    background-color: #ffffff;
-    box-shadow: 0 0 6px 3px #b1b1b14b;
-    margin-bottom: 92px; 
+ 	 display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+  padding: 0;
 }
 
-.activite3 {
-		flex-basis: 40%;
-    height: 220px;
-    border-radius: 20px;
-    background-color: #ffffff;
-    box-shadow: 0 0 6px 3px #b1b1b14b;
-    display: flex;
+.box1{
+  width: 21vw;
+  padding: 0;
+  margin: 0;
+}
+.box2 {
+  width: 21vw;
+  height: 50%;
+  padding: 0;
+  margin: 0;
+}
+.box3 {
+  width: 21vw;
+  height: 41%;
+  padding: 0;
+  margin: 0;
+}
+.imgactiv1 {
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  width: 100%;
+  height: 85%;
+  padding-bottom: 10px;
+  object-fit: cover;
+}
+.imgactiv2 {
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  width: 100%;
+  height: 70%;
+  padding-bottom: 10px;
+  object-fit: cover;
+}
+.imgactiv3 {
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  width: 100%;
+  height: 63%;
+  padding-bottom: 10px;
+  object-fit: cover;
+}
+.figure {
+	background-color: white;
+  border-radius: 20px;
+  box-shadow: 2px 2px 20px rgb(230, 230, 230);
 }
 
-
-.activite5 {
-		flex-basis: 45%;
-    height: 48%;
-    border-radius: 20px;
-    background-color: #ffffff;
-    margin-bottom: 61px;
-    box-shadow: 0 0 6px 3px #b1b1b14b;
-    display: flex;
-}
-
-.activite6 {
-		flex-basis: 45%;
-    height: 48%;
-    border-radius: 20px;
-    background-color: #ffffff;
-    box-shadow: 0 0 6px 3px #b1b1b14b;
-    display: flex;
-}
-.activite2et3,
-.activite5et6 {
-	width: 20%;
-}
 
 footer {
 	border: 1px solid;
@@ -669,46 +637,43 @@ footer {
 		width: 95%;
 		justify-content: space-between;
 	}
-	 #activitesection {
-    width: 95%;
+	#activitesection {
+    width: 100vw;
+    margin: 0;
   }
   .activites {
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     height: auto;
-    width: 95%;
+    margin: 0 30px;
+    margin-bottom: 2.5vw;
   }
-  .activite2et3,
-  .activite5et6 {
+  .activite1 {
+    width: 33%;
+  }
+  .activite2 {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
     -ms-flex-direction: row;
     flex-direction: row;
+    width: 66%;
   }
-  .activite1,
-  .activite2,
-  .activite3,
-  .activite4,
-  .activite5,
-  .activite6 {
+  .box1,
+  .box2,
+  .box3 {
     width: 28vw;
     height: 24vw;
     margin-bottom: 25px;
-  }
-  .activite2,
-  .activite3,
-  .activite5,
-  .activite6 {
+    box-shadow: 0 0 6px 3px #b1b1b14b;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
     -ms-flex-direction: row;
     flex-direction: row;
+    margin-left: 0.7vw;
   }
-  .imgactivbig,
   .imgactiv1,
   .imgactiv2,
-  .imgactiv3,
-  .imgactiv4 {
+  .imgactiv3 {
     height: 18vw;
     padding-bottom: 1vw;
   }
