--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,6 @@ body {
 	overflow-x: hidden;
 	max-width: 100%;
 	margin: 0;
-
-}
-
-h4,p {
-	margin:auto;
 }
 
 
@@ -48,12 +43,12 @@ nav ul {
   display: flex;
   list-style-type: none;
   margin-top: 0;
-  margin-right: 2vw;
+  margin-right: 50px;
 }
 nav ul li {
   border-top: solid 2.5px transparent;
   padding: 38px 30px 0 30px;
-  font-size: 20px;
+  font-size: 1.1em;
 }
 nav ul li:hover {
   border-top: solid 2.5px #0065fc;
@@ -63,10 +58,10 @@ nav ul li:hover {
 }
 .sinscrire {
   font-weight: bolder;
-  font-size: 20px;
+  font-size: 1.1em;
   color: #0065fc;
   float: right;
-  margin-right: 5vw;
+  margin-right: 50px;
   padding-top: 26px;
 }
 
@@ -209,11 +204,15 @@ nav ul li:hover {
 
 .hebergements p {
 	padding-left: 10px;
+	padding-bottom: 0;
 	font-size: 0.8em;
+	padding-top: 0;
 }
 .boxhebergement h4 {
 	font-size: 1em;
 	padding-left: 10px;
+	padding-top: 0;
+	padding-bottom: 0;
 }
 
 .boxhebergement {
@@ -302,6 +301,8 @@ h1 {
 h4 {
 	color: #000000;
 	font-weight: bolder;
+	padding-bottom: 0;
+	padding-top: 0;
 }
 
 
@@ -383,6 +384,7 @@ img {
 
 p {
 	color: #000000;
+	padding-bottom: 0;
 }
 
 .etoilebleu {
@@ -400,12 +402,12 @@ p {
 
 .etoilesheb {
 	padding-left: 10px;
-	font-size: 0.8vw;
+	font-size: 15px;
 	padding-bottom: 5px;
 }
 
 .etoiles {
-	font-size: 0.8vw;
+	font-size: 15px;
 }
 
 .lespluspopulaires {
@@ -441,13 +443,13 @@ main {
 
 #activitesection {
 	display: flex;
-    align-items: stretch;
-    justify-content: space-between;
-    flex-direction: column;
-    border-radius: 20px;
-    width: 100%;
-    position: relative;
-    margin-left: 50px;
+  align-items: stretch;
+  ustify-content: space-between;
+  flex-direction: column;
+  border-radius: 20px;
+  width: 100%;
+  position: relative;
+  margin-left: 50px;
 }
 
 #activitesection h3 {
@@ -462,7 +464,6 @@ main {
     background-color: #ffffff;
     width: 100%;
   	justify-content: space-between;
-  	margin: 0 3.3vw 3.5vw;
   	height: 31.5vw;
 }
 
@@ -490,7 +491,6 @@ footer ul {
 
 
 .activite1 {
-  width: 20%;
   display: flex;
   padding: 0;
 }
@@ -511,50 +511,55 @@ footer ul {
 }
 
 .box1{
-  width: 21vw;
+  width: 75%;
   padding: 0;
   margin: 0;
+  box-shadow: 2px 2px 20px rgb(230, 230, 230);
+  border-radius: 20px;
 }
 .box2 {
-  width: 21vw;
+  width: 75%;
   height: 50%;
   padding: 0;
   margin: 0;
+  box-shadow: 2px 2px 20px rgb(230, 230, 230);
+  border-radius: 20px;
 }
 .box3 {
-  width: 21vw;
+  width: 75%;
   height: 41%;
   padding: 0;
   margin: 0;
+  box-shadow: 2px 2px 20px rgb(230, 230, 230);
+  border-radius: 20px;
 }
 .imgactiv1 {
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   width: 100%;
   height: 85%;
-  padding-bottom: 10px;
+  padding-bottom: 0;
   object-fit: cover;
 }
 .imgactiv2 {
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
   width: 100%;
   height: 70%;
-  padding-bottom: 10px;
+  padding-bottom: 0;
   object-fit: cover;
 }
 .imgactiv3 {
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
   width: 100%;
   height: 63%;
-  padding-bottom: 10px;
+  padding-bottom: 0;
   object-fit: cover;
 }
 .figure {
 	background-color: white;
   border-radius: 20px;
-  box-shadow: 2px 2px 20px rgb(230, 230, 230);
 }
 
 
@@ -638,25 +643,28 @@ footer {
 		justify-content: space-between;
 	}
 	#activitesection {
-    width: 100vw;
+    width: 95%;
     margin: 0;
   }
   .activites {
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     height: auto;
-    margin: 0 30px;
     margin-bottom: 2.5vw;
   }
   .activite1 {
-    width: 33%;
+    width: 31%;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
   }
   .activite2 {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
     -ms-flex-direction: row;
     flex-direction: row;
-    width: 66%;
+    width: 64%;
   }
   .box1,
   .box2,
@@ -665,6 +673,9 @@ footer {
     height: 24vw;
     margin-bottom: 25px;
     box-shadow: 0 0 6px 3px #b1b1b14b;
+  }
+  .box2,
+  .box3 {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
     -ms-flex-direction: row;
@@ -679,45 +690,69 @@ footer {
   }
 
 }
+	
+@media screen and (max-width: 576px){
+	#activitesection {
+    width: 95%;
+    margin: 0;
+  }
+  .activites {
+    flex-direction: column;
+    height: auto;
+  }
+  .activite1 {
+    width: 95%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+  .activite2 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    width: 95%;
+  }
+  .box1,
+  .box2,
+  .box3,
+  .boxhebergement,
+  .boxpopulaire {
+    width: 100%;
+    height: 24vw;
+    margin-bottom: 25px;
+    box-shadow: 0 0 6px 3px #b1b1b14b;
+  }
+  .box2,
+  .box3 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    margin-left: 0.7vw;
+  }
+  .imgactiv1,
+  .imgactiv2,
+  .imgactiv3 {
+    height: 18vw;
+    padding-bottom: 1vw;
+  }
+  footer,
+  footer ul,
+  footer ul li {
+  	-webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+  .noshebergements,
+	.assistance {
+    margin-left: 3vw;
+}
 
-@media screen and (max-width: 700px){
-	.flex-container {
-    	width: 100vw;
-    	position: relative;
-    	-webkit-box-orient: vertical;
-    	-webkit-box-direction: reverse;
-    	-ms-flex-direction: column-reverse;
-    	flex-direction: column-reverse;
-    	margin-left: 0;
-    }
-    nav ul {
-    	width: 100%;
-    	padding-left: 0;
-    	margin-right: 0;
-  	}
-  	nav ul li {
-    	border-bottom: solid 2.5px #f2f2f2;
-    	padding-bottom: 15px;
-    	border-top: solid 2.5px;
-    	border-top-color: transparent;
-    	padding-left: 0;
-  	}	
-  	.menu {
-    	text-align: center;
-    	width: 100%;
-    	padding-bottom: 15px;
-    	padding-top: 25px;
+	.apropos {
+    margin-left: 3vw;
 
-  	}
-  	nav ul li:hover {
-    	border-bottom: solid 2.5px #0065fc;
-    	border-top: solid 2.5px;
-    	border-top-color: transparent;
-    	padding-bottom: 10px;
-    	color: #0065FC;
-  	}
-  	.sinscrire {
-    	margin-right: 25px;
-    	padding-left: 70vw;
-  	}
+	}
 }
